Fix speed regression in Dissolve blendmode

When porting to Qt6 qrand() was directly replaced to
QRandomGenerator::global(), while the latter one uses a global
mutex inside, which makes Dissolve blendmode work extremely slow.
Hence we should use a local copy of a random generator to remove this
bottle-neck.

The bug was introduced by:
https://invent.kde.org/graphics/krita/-/commit/af99e90fa8a4dbbb98059c3c8a4d72daffbbda1d

BUG:501932